--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "vendi-advertising/vendi-shared-utils": "^4"
+        "vendi-advertising/vendi-shared-utils": "^4 || ^5"
     },
     "require-dev" : {
         "phpunit/phpunit": "*",
